Fixed broken link.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <a href="https://github.com/BLAQKWIDOW/Test-Site" target="_blank">My Test Site Repository</a>
 </div>
 <hr />
-<form action="file:///C:/Users/jake/Desktop/Something.html" method="post">
+<form action="something.html" method="post">
 	<label for="birthday"><b>Your Birthday:</b></label>
 	<input type="date" name="birthday" />
 	<input type="submit" value="Submit" />
