removed the class

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <h1>HOMEPAGE</h1>
 <hr />
 <div>
-<a href="https://github.com/BLAQKWIDOW" class="Links" target="_blank">My Github Profile</a>
+<a href="https://github.com/BLAQKWIDOW" target="_blank">My Github Profile</a>
 &nbsp
-<a href="https://github.com/BLAQKWIDOW/Test-Site" class="Links" target="_blank">My Test Site Repository</a>
+<a href="https://github.com/BLAQKWIDOW/Test-Site" target="_blank">My Test Site Repository</a>
 </div>
 <hr />
 <form action="something.html" method="post">
