added class and hopefully better border for links

--- a/index.html
+++ b/index.html
@@ -6,13 +6,10 @@
 </head>
 <body>
 <h1>HOMEPAGE</h1>
-<hr />
 <div>
-<a href="https://github.com/BLAQKWIDOW" target="_blank">My Github Profile</a>
-&nbsp
-<a href="https://github.com/BLAQKWIDOW/Test-Site" target="_blank">My Test Site Repository</a>
+<a class="Toppage" href="https://github.com/BLAQKWIDOW" target="_blank">My Github Profile</a>
+<a class="Toppage" href="https://github.com/BLAQKWIDOW/Test-Site" target="_blank">My Test Site Repository</a>
 </div>
-<hr />
 <form action="something.html" method="post">
 	<label for="birthday"><b>Your Birthday:</b></label>
 	<input type="date" name="birthday" />
