--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <h1>HOMEPAGE</h1>
-<div>
-<a class="toppage" href="https://github.com/BLAQKWIDOW" target="_blank">My Github Profile</a>
-<a class="toppage" href="https://github.com/BLAQKWIDOW/Test-Site" target="_blank">My Test Site Repository</a>
+<div class="toppage">
+<a  href="https://github.com/BLAQKWIDOW" target="_blank">My Github Profile</a>
+<a  href="https://github.com/BLAQKWIDOW/Test-Site" target="_blank">My Test Site Repository</a>
 </div>
 <form action="something.html" method="post">
 	<label for="birthday"><b>Your Birthday:</b></label>
