--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 <body>
 	<h1>HOMEPAGE</h1>
-	<div id="links">
+	<div>
 		<a  href="https://github.com/BLAQKWIDOW" target="_blank">My Github Profile</a>
 		<a  href="https://github.com/BLAQKWIDOW/Test-Site" target="_blank">My Test Site Repository</a>
 	</div>
