made something .html into something

--- a/something.html
+++ b/something.html
@@ -1,1 +1,9 @@
-fsdjfjksfd
+<!DOCTYPE html>
+<html>
+    <head>
+        <title> Page 2</title>
+    </head>
+    <body>
+        <p> heya pals this is a secret page pals </p>
+    </body>
+</html>
